elva: Sexp class introduced